--- a/.github/workflows/Airport Checkin.yml
+++ b/.github/workflows/Airport Checkin.yml
@@ -19,12 +19,12 @@ jobs:
         with:
           fetch-depth: 0
           # ref: master
-
-      - name: Set up python
-        uses: actions/setup-python@v2
+          
+      - name: Setup Python
+        uses: actions/setup-python@v5.3.0
         with:
           python-version: 3.7
-
+          
       - name: Random sleep
         if: github.event_name == 'schedule'
         run: sleep $(shuf -i 10-300 -n 1)
