--- a/.github/workflows/Airport Checkin.yml
+++ b/.github/workflows/Airport Checkin.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5.3.0
         with:
-          python-version: 3.7
+          python-version: 
           
       - name: Random sleep
         if: github.event_name == 'schedule'
